--- a/css/style.css
+++ b/css/style.css
@@ -377,6 +377,15 @@ header #more {
   width: 100%;
   height: 100%;
 }
+.m_main .animeGif {
+  width: 600px;
+  background-color: #DDD;
+}
+.m_main .animeGif img {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 0;
+}
 .m_main img {
   width: 600px;
   height: auto;
