--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -164,6 +164,9 @@ $w: 90%;
 				}
 			}
 		}
+		.logo{
+			left: 0;
+		}
 	}
 	.m_main{
 		margin-top: 30px;
@@ -205,15 +208,18 @@ $w: 90%;
 			clear: both;
 			display: block;
 		}
-		.pic{
-			width: 100%;
-			img{
-				width: 49%;
-			}
-			margin-bottom: 10px;
-		}
 		.exp{
 			width: 100%;
 		}
+	}
+	.pic{
+		width: 100% !important;
+		.long{
+			width: 100% !important;
+		}
+		img{
+			width: 49%;
+		}
+		margin-bottom: 10px;
 	}
 }
