--- a/css/style.scss
+++ b/css/style.scss
@@ -344,6 +344,7 @@ header{
 			left: -28px;
 		}
 		border: 1px solid #666;
+
 	}
 	.comming{
 		background-color: #ddd;
@@ -389,7 +390,7 @@ $columnWidth : (1240px - $centerMargin)/2;
 		background-color: #DDD;
 		img{
 			width: 100%;
-			height: 100%;
+			height: auto;
 			margin-bottom: 0;
 		}
 	}
@@ -418,7 +419,7 @@ $columnWidth : (1240px - $centerMargin)/2;
 	height: 200px;
 	clear: both;
 	.long{
-		width: $columnWidth;
+		width: $columnWidth !important;
 		height: auto;
 		margin-bottom: 60px;
 		clear: left;
