--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -214,6 +214,10 @@ $w: 90%;
 		.exp{
 			width: 100%;
 		}
+		img{
+			width: 100% !important;
+			margin: 10px 0;
+		}
 	}
 	.pic{
 		width: 100% !important;
