--- a/css/style.scss
+++ b/css/style.scss
@@ -296,7 +296,7 @@ header{
 	.work{
 
 		background-color: #000;
-		margin: 0 10px;
+		margin: 10px 10px;
 		float: left;
 		width: 398px;
 		height: 288px;
@@ -348,11 +348,12 @@ header{
 	}
 	.comming{
 		background-color: #ddd;
+		overflow: hidden;
 		img{
 			opacity: 0.3;
-			width: 398px;
-			height: auto;
-			left: 0;
+			width: auto;
+			height: 100%;
+			margin: 0 auto;
 			@include vertical-align;
 		}
 		p{
