--- a/css/style.scss
+++ b/css/style.scss
@@ -339,12 +339,13 @@ header{
 			}
 		}
 	}
-	.logo{
+	.img_l0{
 		img{
 			left: -28px;
 		}
+	}
+	.blackboader{
 		border: 1px solid #666;
-
 	}
 	.comming{
 		background-color: #ddd;
